@@ -47,6 +47,7 @@ private:
     bool plot_curve[16];
     
     QSpinBox  * cswitchOffset[NUM_CSW];
+    QSpinBox  * cswitchOffset0[NUM_CSW];
     QComboBox * cswitchSource1[NUM_CSW];
     QComboBox * cswitchSource2[NUM_CSW];
 
